--- a/ConsoleApplication/ConsoleApplication.csproj
+++ b/ConsoleApplication/ConsoleApplication.csproj
@@ -42,14 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Aluno.cs" />
-    <Compile Include="Avaliacao.cs" />
+    <Compile Include="Prova.cs" />
     <Compile Include="Nota.cs" />
+    <Compile Include="AvaliadorProva.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="AvalicaoDiagram.cd" />
+    <None Include="AvaliacaoDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
