--- a/DiarioAcademiaTests/DiarioAcademia.Dominio.Tests.csproj
+++ b/DiarioAcademiaTests/DiarioAcademia.Dominio.Tests.csproj
@@ -62,6 +62,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AvaliadorProvaTest.cs" />
+    <Compile Include="GabaritoTest.cs" />
     <Compile Include="ProvaDataBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvaTest.cs" />
