--- a/DiarioAcademia.Aplicacao/DiarioAcademia.Aplicacao.csproj
+++ b/DiarioAcademia.Aplicacao/DiarioAcademia.Aplicacao.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcompanhamentoAppService.cs" />
+    <Compile Include="NotificadorAppService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
