--- a/DiarioAcademia.Tests.Shared/DiarioAcademia.Tests.Shared.csproj
+++ b/DiarioAcademia.Tests.Shared/DiarioAcademia.Tests.Shared.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{87DD75BD-E9B9-4416-BD84-075729F896CC}</ProjectGuid>
+    <ProjectGuid>{E420E47B-8E4A-4243-A9C0-932F590AAE65}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DiarioAcademia.Dominio</RootNamespace>
-    <AssemblyName>DiarioAcademia.Dominio</AssemblyName>
+    <RootNamespace>DiarioAcademia.Tests.Shared</RootNamespace>
+    <AssemblyName>DiarioAcademia.Tests.Shared</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -21,10 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,30 +29,24 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FeedbackProva.cs" />
-    <Compile Include="Questao.cs" />
-    <Compile Include="Aluno.cs" />
-    <Compile Include="Gabarito.cs" />
-    <Compile Include="Prova.cs" />
-    <Compile Include="Nota.cs" />
-    <Compile Include="AvaliadorProva.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProvaDataBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Gabarito.cd" />
-    <None Include="ProvaDiagram.cd" />
+    <ProjectReference Include="..\ConsoleApplication\DiarioAcademia.Dominio.csproj">
+      <Project>{87dd75bd-e9b9-4416-bd84-075729f896cc}</Project>
+      <Name>DiarioAcademia.Dominio</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
