--- a/DiarioAcademiaTests/DiarioAcademia.Dominio.Tests.csproj
+++ b/DiarioAcademiaTests/DiarioAcademia.Dominio.Tests.csproj
@@ -63,7 +63,6 @@
   <ItemGroup>
     <Compile Include="AvaliadorProvaTest.cs" />
     <Compile Include="GabaritoTest.cs" />
-    <Compile Include="ProvaDataBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvaTest.cs" />
   </ItemGroup>
@@ -71,6 +70,10 @@
     <ProjectReference Include="..\ConsoleApplication\DiarioAcademia.Dominio.csproj">
       <Project>{87dd75bd-e9b9-4416-bd84-075729f896cc}</Project>
       <Name>DiarioAcademia.Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DiarioAcademia.Tests.Shared\DiarioAcademia.Tests.Shared.csproj">
+      <Project>{e420e47b-8e4a-4243-a9c0-932f590aae65}</Project>
+      <Name>DiarioAcademia.Tests.Shared</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
