--- a/DiarioAcademia.Infraestrutura/DiarioAcademia.Infra.Dao.csproj
+++ b/DiarioAcademia.Infraestrutura/DiarioAcademia.Infra.Dao.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Db.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvaDao.cs" />
+    <Compile Include="ProvaDaoFalso.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConsoleApplication\DiarioAcademia.Dominio.csproj">
@@ -51,7 +52,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="dctests-queries.sql" />
+    <Content Include="dctests-insert-queries.sql" />
+    <Content Include="dctests-select-queries.sql" />
+    <Content Include="dctests-delete-queries.sql" />
     <Content Include="dctests-scripts.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
