--- a/DiarioAcademia.Aplicacao/DiarioAcademia.Aplicacao.csproj
+++ b/DiarioAcademia.Aplicacao/DiarioAcademia.Aplicacao.csproj
@@ -44,18 +44,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AcompanhamentoAppService.cs" />
-    <Compile Include="NotificadorAppService.cs" />
+    <Compile Include="FeedbackService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FrequenciaService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConsoleApplication\DiarioAcademia.Dominio.csproj">
       <Project>{87dd75bd-e9b9-4416-bd84-075729f896cc}</Project>
       <Name>DiarioAcademia.Dominio</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DiarioAcademia.Infraestrutura\DiarioAcademia.Infra.Dao.csproj">
+    <ProjectReference Include="..\DiarioAcademia.Infraestrutura\DiarioAcademia.Infra.csproj">
       <Project>{d650f5b8-4679-4fea-aa13-82393449503f}</Project>
-      <Name>DiarioAcademia.Infra.Dao</Name>
+      <Name>DiarioAcademia.Infra</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
