--- a/DiarioAcademiaTests/DiarioAcademia.Dominio.Tests.csproj
+++ b/DiarioAcademiaTests/DiarioAcademia.Dominio.Tests.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FizzWare.NBuilder">
+      <HintPath>..\packages\NBuilder.3.0.1.1\lib\FizzWare.NBuilder.dll</HintPath>
+    </Reference>
     <Reference Include="FluentAssertions">
       <HintPath>..\packages\FluentAssertions.4.0.0\lib\net45\FluentAssertions.dll</HintPath>
     </Reference>
@@ -61,10 +64,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="AvaliadorProvaTest.cs" />
-    <Compile Include="GabaritoTest.cs" />
+    <Compile Include="AvaliacaoModule\AvaliadorProvaTest.cs" />
+    <Compile Include="AvaliacaoModule\GabaritoProvaTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProvaTest.cs" />
+    <Compile Include="AvaliacaoModule\ProvaTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConsoleApplication\DiarioAcademia.Dominio.csproj">
