--- a/DiarioAcademiaTests/packages.config
+++ b/DiarioAcademiaTests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="FluentAssertions" version="4.0.0" targetFramework="net45" />
   <package id="MSTestExtensions" version="4.0.0" targetFramework="net45" />
+  <package id="NBuilder" version="3.0.1.1" targetFramework="net45" />
 </packages>
