--- a/ConsoleApplication/DiarioAcademia.Dominio.csproj
+++ b/ConsoleApplication/DiarioAcademia.Dominio.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AvaliacaoModule\FeedbackEnum.cs" />
     <Compile Include="AvaliacaoModule\FeedbackProva.cs" />
     <Compile Include="AvaliacaoModule\IRepositorioFeedback.cs" />
     <Compile Include="AvaliacaoModule\IRepositorioProva.cs" />
