--- a/DiarioAcademia.Infraestrutura/DiarioAcademia.Infra.csproj
+++ b/DiarioAcademia.Infraestrutura/DiarioAcademia.Infra.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AvaliacaoModule\Arquivo\GeradorFeedback.cs" />
+    <Compile Include="Shared\DaoException.cs" />
     <Compile Include="Shared\Db.cs" />
     <Compile Include="AvaliacaoModule\Email\EmissorFeedback.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
