--- a/DiarioAcademia.Infraestrutura/DiarioAcademia.Infra.csproj
+++ b/DiarioAcademia.Infraestrutura/DiarioAcademia.Infra.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="itextsharp">
+      <HintPath>..\packages\iTextSharp.5.5.7\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -60,7 +63,9 @@
     <Content Include="AvaliacaoModule\Dao\Scripts\dctests-delete-queries.sql" />
     <Content Include="AvaliacaoModule\Dao\Scripts\dctests-scripts.sql" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
