--- a/DiarioAcademiaTests/DiarioAcademia.Dominio.Tests.csproj
+++ b/DiarioAcademiaTests/DiarioAcademia.Dominio.Tests.csproj
@@ -44,10 +44,17 @@
     <Reference Include="FluentAssertions.Core">
       <HintPath>..\packages\FluentAssertions.4.0.0\lib\net45\FluentAssertions.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=11.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="mscorlib.4.0.0.0.Fakes">
+      <HintPath>FakesAssemblies\mscorlib.4.0.0.0.Fakes.dll</HintPath>
+    </Reference>
     <Reference Include="MSTestExtensions">
       <HintPath>..\packages\MSTestExtensions.4.0.0\lib\MSTestExtensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.4.0.0.0.Fakes">
+      <HintPath>FakesAssemblies\System.4.0.0.0.Fakes.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -65,6 +72,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AvaliacaoModule\AvaliadorProvaTest.cs" />
+    <Compile Include="AvaliacaoModule\FeedbackMensalTest.cs" />
     <Compile Include="AvaliacaoModule\GabaritoProvaTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AvaliacaoModule\ProvaTest.cs" />
@@ -80,6 +88,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Fakes Include="Fakes\System.fakes" />
+    <Fakes Include="Fakes\mscorlib.fakes" />
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
